kubernetes/traefik-tailscale/basicauth-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik-tailscale
spec:
  basicAuth:
    secret: traefik-dashboard-auth
