kubernetes/traefik-tailscale/monitoring.yaml
# Service targeting port 9100
apiVersion: v1
kind: Service
metadata:
  name: traefik-tailscale-monitoring
  namespace: traefik-tailscale
  labels:
    app: traefik
    instance: tailscale
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
      protocol: TCP
  selector:
    app: traefik
    instance: tailscale
