kubernetes/traefik-tailscale/ingressroute-dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-tailscale
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.internal.dmhosted.com`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik-tailscale
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-certificate-secret-internal
